--- a/WindowsConsoleGameBase/WindowsConsoleGameBase.vcxproj
+++ b/WindowsConsoleGameBase/WindowsConsoleGameBase.vcxproj
@@ -139,17 +139,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CreateFigure.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="ExampleGame.cpp" />
     <ClCompile Include="Figure.cpp" />
     <ClCompile Include="GameField.cpp" />
     <ClCompile Include="IBlock.cpp" />
+    <ClCompile Include="JBlock.cpp" />
+    <ClCompile Include="LBlock.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="OBlock.cpp" />
     <ClCompile Include="PaintDevice.cpp" />
+    <ClCompile Include="SBlock.cpp" />
     <ClCompile Include="Size.cpp" />
     <ClCompile Include="Square.cpp" />
+    <ClCompile Include="TBlock.cpp" />
     <ClCompile Include="Tetris.cpp" />
     <ClCompile Include="Vector2.cpp" />
+    <ClCompile Include="ZBlock.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CreateFigure.h" />
@@ -158,12 +165,18 @@
     <ClInclude Include="Figure.h" />
     <ClInclude Include="GameField.h" />
     <ClInclude Include="IBlock.h" />
+    <ClInclude Include="JBlock.h" />
+    <ClInclude Include="LBlock.h" />
     <ClInclude Include="main.h" />
+    <ClInclude Include="OBlock.h" />
     <ClInclude Include="PaintDevice.h" />
+    <ClInclude Include="SBlock.h" />
     <ClInclude Include="Size.h" />
     <ClInclude Include="Square.h" />
+    <ClInclude Include="TBlock.h" />
     <ClInclude Include="Tetris.h" />
     <ClInclude Include="Vector2.h" />
+    <ClInclude Include="ZBlock.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="ClassDiagram.cd" />
